# aso

./: .reload_trigger  README.md  SKILL.md  benchmark.skill  config.yaml  deploy.skill  diagnose.skill  evolution-policy.yaml  gate.skill  observe.skill  orchestrate.skill  pyproject.toml  reflect.skill  report.skill  rollback.skill  sandbox.skill  test_types_debug.py  trace_schema.json  trace_schema.yaml  trace_to_eval.py
.github/workflows/: ci.yml
_lib/: config_loader.py  default_policy.py  delta.py  event_manager.py  exceptions.py  experience_tier.py  judge.py  llm_cache.py  lock_utils.py  manifest_utils.py  memory_bridge.py  oc_llm_client.py  oc_session_reader.py  optimization_memory.py  path_utils.py  pii_mask.py  policy_engine.py  scope_policy.py  session_manager.py  time_utils.py  types.py  version_manager.py
docs/: FROZEN.md  aso-optimization-report.md  aso-v2-design.md  cli-contract.md  evolution-event-model.md  evolution-policy.md  skill-delta-spec.md  skillopt-analysis.md  trigger-tests.json
evals/: aso_self_evals.json
evals/adversarial/: adversarial.json
evals/failures/: failure-00130e46.json  failure-00359384.json  failure-009bcaa1.json  failure-010a4f54.json  failure-01af052a.json  failure-01e5d240.json  failure-02e85b58.json  failure-03050526.json  failure-031c75fa.json  failure-03779848.json  failure-037b8c47.json  failure-04071985.json  failure-041c2c04.json  failure-0422e023.json  failure-044053a0.json  failure-04718219.json  failure-048cb429.json  failure-0493be61.json  failure-04d06a9c.json  failure-0502289c.json  failure-05d2a550.json  failure-0620254e.json  (+779 more)
generator/: bilevel.py  registry.py  skill_opt_refactor.py
optimizer/: delta_calculator.py  eval_runner.py  snapshot_manager.py  tdo_calibrator.py
state/: evolution-policy.yaml  manifests.json  optimization_memory.json  trace_store.json
tests/: test_delta.py  test_delta_calculator.py  test_diagnose_v2.py  test_event_manager.py  test_experience_tier.py  test_gate_v2.py  test_generator.py  test_integration.py  test_memory_bridge.py  test_new_modules.py  test_optimization_memory.py  test_orchestrate_default.py  test_policy_engine.py  test_reflect.py  test_sandbox_v2.py  test_scope_policy.py  test_version_manager.py
(+1165 files in other folders)
